--- a/project-rossini/pom.xml
+++ b/project-rossini/pom.xml
@@ -60,6 +60,11 @@
 			<artifactId>h2</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.flywaydb</groupId>
+			<artifactId>flyway-core</artifactId>
+			<version>9.22.3</version>
+		</dependency>
 	</dependencies>
 
 	<build>
