fixes for the RecipeController

--- a/project-rossini/src/main/resources/application.yaml
+++ b/project-rossini/src/main/resources/application.yaml
@@ -12,3 +12,7 @@ spring:
     data-password: ""
   jpa:
     database-platform: org.hibernate.dialect.H2Dialect
+    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
