--- a/project-rossini/pom.xml
+++ b/project-rossini/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>ppke-itk-halkszavu</groupId>
 	<artifactId>project-rossini</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1</version>
 	<name>project-rossini</name>
 	<description>Project Rossini Application</description>
 	<properties>
