--- a/project-rossini/src/main/resources/application.yaml
+++ b/project-rossini/src/main/resources/application.yaml
@@ -16,3 +16,9 @@ spring:
     properties:
       hibernate:
         format_sql: true
+
+logging:
+  level:
+    org:
+      springframework:
+        security: DEBUG
